# js-tokenizer

./: CMakeLists.txt  main.cpp  run100.sh
src/: CSVParser.cpp  CSVParser.h  DBWriter.h  analyzer.h  buffers.cpp  buffers.h  config.h  crawler.cpp  crawler.h  data.cpp  data.h  db.cpp  db.h  downloader.cpp  downloader.h  driver.cpp  driver.h  drivers.h  escape_codes.h  globals.h  helpers.h  main.cpp  merger.cpp  merger.h  merging.cpp  project_crawler.h  records.h  tokenization.cpp  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  validator.cpp  validator.h  worker.cpp  worker.h  writer.cpp  writer.h
src/cleanup/: data.h  escapes.h  helpers.h  main.cpp  worker.cpp  worker.h
src/cleanup/tokenizers/: generic.h  js.cpp
src/cleanup/workers/: CSVReader.h  DBWriter.cpp  DBWriter.h  Downloader.h  Merger.cpp  Merger.h  Tokenizer.cpp  Tokenizer.h  Writer.cpp  Writer.h
src/languages/: javascript.h
src/old/: analyzer.cpp  config.h  crawler.cpp  crawler.h  data.h  main.cpp  worker.cpp  worker.h  writer.cpp
src/tokenizers/: generic.cpp  generic.h  js.cpp  js.h
src/workers/: CSVReader.cpp  CSVReader.h  DBWriter.cpp  DBWriter.h  Downloader.cpp  Downloader.h  Merger.cpp  Merger.h  ResultsMerger.cpp  ResultsMerger.h  Tokenizer.cpp  Tokenizer.h  Writer.cpp  Writer.h
